# pymol-siteview

./: LICENSE  MANIFEST.in  README.md  environment.yml  pymol_siteview.py  pyproject.toml  requirements.txt
examples/: README.md
scripts/: install_conda.ps1  install_conda.sh
src/pymol_siteview/: __init__.py  cli.py
tests/: test_geometry.py
