[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymol-siteview"
version = "0.1.0"
description = "Automated PyMOL site-view renderer for PDB, mmCIF, MOL2, SDF and related structure files."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "lei_junkun" }
]
keywords = ["pymol", "protein", "ligand", "siteview", "pdb", "cif", "mol2"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8",
  "ruff>=0.4",
]

[project.scripts]
pymol-siteview = "pymol_siteview.cli:main"

[project.urls]
Homepage = "https://github.com/your-name/pymol-siteview"
Issues = "https://github.com/your-name/pymol-siteview/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
